--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,6 @@
 	<classpathentry kind="lib" path="/home/sasuke/eclipse workspace/IndianBankManagment/WebContent/WEB-INF/lib/persistence-api-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/sasuke/eclipse workspace/IndianBankManagment/WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/postgresql-9.4.1208.jre6.jar"/>
+	<classpathentry kind="lib" path="/home/sasuke/eclipse workspace/IndianBankManagment/WebContent/WEB-INF/lib/gson-2.2.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
